[package]
name = "moyaibot"
version = "0.1.0"
edition = "2021"
description = "A discord bot that reacts with 🗿 to every message"
authors = ["Squirrelcoding"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.1.6", features = ["derive"] }
dirs = "4.0.0"